# gestion-cujae-GC-

./: .gitignore  CMakeLists.txt  basedato2.sql  construccion-del-proyecto.docx  main.cpp  paracrearbd.sql  pedro-valdes-hernandez gupo-22.docx  read.txt  ~$nstruccion-del-proyecto.docx
consultassql/: basedato.sql  basedato2.sql  consultas.sql  triggers.sql  views.sql
gc-functions/: complements.cpp  consult.cpp  gc.h  gc_deletes.cpp  gc_getinfo.cpp  gc_init.cpp  gc_insert.cpp  gc_logic.cpp  gc_opcprof.cpp  gc_updates.cpp  gc_verify.cpp  leer.txt
menu-users/: menu.cpp  menu.h  menu_admin.cpp  menu_prof.cpp  menu_student.cpp  usr.cpp  usr.h
vision_computer/: const.h
